Bug 156591 - A11Y sidebar: not fixable warning about "Style has no language set."
Summary: A11Y sidebar: not fixable warning about "Style has no language set."
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:24.2.0 target:7.6.2
Keywords:
Depends on:
Blocks: Accessibility-Check
  Show dependency treegraph
 
Reported: 2023-08-03 10:16 UTC by Gabor Kelemen (Collabora)
Modified: 2023-08-30 12:59 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Example file from Writer with several a11y warnings (177.46 KB, application/vnd.oasis.opendocument.text)
2023-08-03 10:16 UTC, Gabor Kelemen (Collabora)
Details
Screenshot of the issues in the document (283.13 KB, image/png)
2023-08-03 10:17 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Gabor Kelemen (Collabora) 2023-08-03 10:16:58 UTC
Created attachment 188740 [details]
Example file from Writer with several a11y warnings

Attached example file contains a style where the language was set to None.
The accessibility sidebar gives a warning about this, but no Fix button to solve the issue.

1. Open attached file
2. Open the Accessibility sidebar
3. Observe the warning "Style “NoLanguage” has no language set."
-> Should have a Fix button to open the NoLanguage style properties dialog

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: eff5a3fe98ca5d1d28c4f5386c4af8a3be8f5703
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: gtk3
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded
Comment 1 Gabor Kelemen (Collabora) 2023-08-03 10:17:20 UTC
Created attachment 188741 [details]
Screenshot of the issues in the document
Comment 2 Commit Notification 2023-08-16 15:04:49 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b4cbf44e8d5072e79b62e6b4e3b1c2480e4a34f3

tdf#156591 - A11Y - add fix button for "Style has no language set."

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 BogdanB 2023-08-16 16:14:43 UTC
Working well. Opening the right window.

Verified with
Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b4cbf44e8d5072e79b62e6b4e3b1c2480e4a34f3
CPU threads: 16; OS: Linux 6.2; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 4 Commit Notification 2023-08-30 12:59:23 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/444640a02ee3cfef92a5061c6934c4e0a0a1eaa6

tdf#156591 - A11Y - add fix button for "Style has no language set."

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.