tdf#156591 - A11Y - add fix button for "Style has no language set."

Open style language character settings if the language is set to 'None'.
Add EditStyleFont uno command for editing directly Font of paragraph styles.

Change-Id: I8b7d7880cc77f7352edac089ee95b4a6d0744575
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155494
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
(cherry picked from commit b4cbf44e8d5072e79b62e6b4e3b1c2480e4a34f3)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155785